<resources>
    <string name="app_name">音乐定时器</string>
    <string name="code_url">https://gitee.com/jaimly/music-timer</string>
    <string name="view_button_start">开始</string>
    <string name="view_button_end">结束</string>
    <string name="view_button_permission">申请权限</string>
    <string name="view_button_add">新增</string>
    <string name="view_music_title">歌曲：</string>
    <string name="view_music_default">随机</string>
    <string name="view_time_mode">模式：</string>
    <string name="view_time_btn_add">新增</string>
    <string name="view_time_btn_done">完成</string>
    <string name="view_time_btn_edit">编辑</string>
    <string name="view_time_btn_del">删除</string>
    <string name="view_time_des_start">开始,播</string>
    <string name="view_start_time">开始时间：</string>
    <string name="view_play_time">播放时间：</string>
    <string name="view_play_time_unit">分钟</string>
    <string name="view_music_path_title">音乐目录：</string>
    <string name="view_music_path">我的手机/Music</string>
    <string name="view_music_path_name">音乐定时器</string>
    <string name="view_mode_normal">常规</string>
    <string name="view_mode_custom">自定义</string>
    <string name="toast_set_time">开始时间须大于当前时间</string>
    <string name="toast_permission_audio">请开启本地数据和音乐权限</string>
    <string name="toast_permission_write">请开启本地数据读写权限</string>
    <string name="toast_permission_wake_lock">请开启保持屏幕常亮权限</string>
    <string name="toast_no_music">请添加音乐到音乐目录</string>
    <string name="toast_normal_time_exists">开始时间不能重叠</string>
    <string name="toast_normal_time_limit">最多添加10条</string>
    <string name="toast_version_update">请更新版本：</string>
</resources>