<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/index"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_music_path_title"
                android:textSize="@dimen/text_size_second_body" />
            <TextView
                android:id="@+id/music_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_music_path"
                android:textSize="@dimen/text_size_second_body" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_music_title" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:id="@+id/music_list"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAlignment="center"
                android:id="@+id/music_name"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/view_time_mode" />

                <org.ganquan.musictimer.comp.RadioGroup
                    android:id="@+id/mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/mode_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/view_mode_normal" >
                        </RadioButton>

                        <TextView
                            android:id="@+id/normal_time_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/view_time_btn_edit"
                            android:textColor="@color/blue"
                            tools:ignore="ChildInNonViewGroup" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintHeight_default="wrap"
                            app:layout_constraintHeight_max="125dp"
                            android:scrollbars="vertical"
                            android:id="@+id/normal_time_list"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/mode_custom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-10dp"
                            android:text="@string/view_mode_custom" />
                    </LinearLayout>
                </org.ganquan.musictimer.comp.RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mode_custom_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_start_time" />

                    <TimePicker
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:timePickerMode="spinner" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_play_time" />

                    <NumberPicker
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:id="@+id/play_time"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/view_play_time_unit" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/view_button_start"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:paddingBottom="10dp"
        android:id="@+id/note"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_third_body"
            android:text="@string/note_permission_access_background"
            android:id="@+id/note_text"
            tools:ignore="RtlCompat" />

        <Button
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/view_note_btn"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_third_body"
            android:id="@+id/note_btn"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>